--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           </div>
         </div>
         <div class="product-card">
-          <img src="/all-over-print-backpack-white-right-67ab9afc02352.png" alt="Mochila Golden Oak Camp">
+          <img src="https://github.com/Lasesito/Paralaweb/blob/main/all-over-print-backpack-white-right-67ab9afc02352.png?raw=true">
           <h3>Mochila Aventura</h3>
           <p class="price">45€</p>
           <p>Mochila resistente al agua para excursiones</p>
